--- a/src/app/components/pages/merchandise/branch-receiving/branch-receiving.component.html
+++ b/src/app/components/pages/merchandise/branch-receiving/branch-receiving.component.html
@@ -194,7 +194,7 @@
                             <tr>
                                 <th>Ảnh</th>
                                 <th>Tên sản phẩm</th>
-                                <th style="text-align: center">Giá chuyển</th>
+                                <!-- <th style="text-align: center">Giá chuyển</th> -->
                                 <th style="text-align: center">ĐVT</th>
                                 <th style="text-align: center">SL chuyển</th>
                                 <th style="text-align: center">SL nhận</th>
@@ -243,7 +243,7 @@
                                 <td style="width: 15.5%">
                                     {{ data.productName }}
                                 </td>
-                                <td style="width: 12.5%; text-align: center">
+                                <!-- <td style="width: 12.5%; text-align: center">
                                     {{ data.productPrice?.toLocaleString(
                                         "vi-VN",
                                         {
@@ -251,7 +251,7 @@
                                             currency: "VND"
                                         }
                                     ) }}
-                                </td>
+                                </td> -->
                                 <td style="width: 9%; text-align: center">
                                     {{ data.unitName }}
                                 </td>
