--- a/src/app/components/pages/supplier/supplier.component.html
+++ b/src/app/components/pages/supplier/supplier.component.html
@@ -37,7 +37,6 @@
                             <span class="p-input-icon-left" style="width: 100%;">
                                 <i class="pi pi-search"></i>
                                 <input type="text" class="form-control" [(ngModel)]="keySearch"
-                                    (ngModelChange)="onSearchTermChanged($event)"
                                     placeholder="Tìm kiếm theo tên nhà cung cấp, số điện thoại" style="padding-left: 30px; height: 45px;" />
                             </span>
                         </div>
@@ -47,6 +46,7 @@
                                 pButton
                                 pRipple
                                 label="Lọc"
+                                (click)="onFilterClick()"
                         ></button>
                         </div>
                     </div>
@@ -131,7 +131,7 @@
                             <div class="col-md-6">
                                 <div class="mb-3">
                                     <label for="addName" class="form-label">Tên nhà cung cấp<span class="red-asterisk">*</span></label>
-                                    <input type="text" class="form-control" [(ngModel)]="supplier.name" id="addName" name="name" ngModel required minlength="1"
+                                    <input type="text" [style]="{ height: '40px', width: '95%' }" class="form-control" [(ngModel)]="supplier.name" id="addName" name="name" ngModel required minlength="1"
                                         maxlength="255">
                                     <div *ngIf="customerCreateForm.submitted && customerCreateForm.controls['name']?.invalid"
                                         class="error-message">
@@ -144,26 +144,24 @@
                                         </div>
                                     </div>
                                 </div>
+
                                 <div class="mb-3">
-                                    <label for="phone" class="form-label">Số điện thoại<span class="red-asterisk">*</span></label>
-                                    <input type="text" class="form-control" pattern="^(03|05|07|08|09)\d{8}$" (keypress)="validateNumber($event)" minlength="10" maxlength="10" id="phone" name="phone"
-                                        [(ngModel)]="supplier.phone" required>
-                                    <div *ngIf="customerCreateForm.submitted && customerCreateForm.controls['phone']?.invalid">
-                                        <div *ngIf="customerCreateForm.controls['phone']?.errors?.['required']" class="error-message">
-                                            Số điện không được bỏ trống
+                                    <label for="name" class="form-label">Địa chỉ</label>
+                                    <input type="text" [style]="{ height: '40px', width: '95%' }" class="form-control" id="address" name="address" [(ngModel)]="supplier.address"
+                                        maxlength="255">
+                                    <div *ngIf="customerCreateForm.submitted && customerCreateForm.controls['address']?.invalid">
+                                        <div *ngIf="customerCreateForm.controls['address']?.errors?.['required']" class="error-message">
+                                            Địa chỉ không được bỏ trống
                                         </div>
-                                        <!-- <div *ngIf="customerCreateForm.controls['phone']?.errors?.['minlength'] || customerCreateForm.controls['phone']?.errors?.['maxlength']"
-                                            class="error-message">
-                                            Số điện thoại phải đúng 10 ký tự
-                                        </div> -->
-                                        <div *ngIf="customerCreateForm.controls['phone']?.errors?.['pattern']" class="error-message">
-                                            Số điện thoại không hợp lệ
+                                        <div *ngIf="customerCreateForm.controls['address']?.errors?.['maxlength']" class="error-message">
+                                            Địa chỉ không được vượt quá 255 ký tự
                                         </div>
                                     </div>
                                 </div>
+                              
                                 <div class="mb-3">
                                     <label for="email" class="form-label">Email</label>
-                                    <input type="email" class="form-control" id="email" name="email" [(ngModel)]="supplier.email"
+                                    <input type="email" [style]="{ height: '40px', width: '95%' }" class="form-control" id="email" name="email" [(ngModel)]="supplier.email"
                                         pattern="^(?!\.)[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,4}(?<!\.)$">
                                     <div *ngIf="customerCreateForm.submitted && customerCreateForm.controls['email']?.invalid">
                                         <div *ngIf="customerCreateForm.controls['email']?.errors?.['required']" class="error-message">
@@ -179,21 +177,26 @@
                             <!-- Cột phải -->
                             <div class="col-md-6">
                                 <div class="mb-3">
-                                    <label for="name" class="form-label">Địa chỉ</label>
-                                    <input type="text" class="form-control" id="address" name="address" [(ngModel)]="supplier.address"
-                                        maxlength="255">
-                                    <div *ngIf="customerCreateForm.submitted && customerCreateForm.controls['address']?.invalid">
-                                        <div *ngIf="customerCreateForm.controls['address']?.errors?.['required']" class="error-message">
-                                            Địa chỉ không được bỏ trống
+                                    <label for="phone" class="form-label">Số điện thoại<span class="red-asterisk">*</span></label>
+                                    <input type="text" [style]="{ height: '40px', width: '95%' }" class="form-control" pattern="^(03|05|07|08|09)\d{8}$" (keypress)="validateNumber($event)" minlength="10" maxlength="10" id="phone" name="phone"
+                                        [(ngModel)]="supplier.phone" required>
+                                    <div *ngIf="customerCreateForm.submitted && customerCreateForm.controls['phone']?.invalid">
+                                        <div *ngIf="customerCreateForm.controls['phone']?.errors?.['required']" class="error-message">
+                                            Số điện không được bỏ trống
                                         </div>
-                                        <div *ngIf="customerCreateForm.controls['address']?.errors?.['maxlength']" class="error-message">
-                                            Địa chỉ không được vượt quá 255 ký tự
+                                        <!-- <div *ngIf="customerCreateForm.controls['phone']?.errors?.['minlength'] || customerCreateForm.controls['phone']?.errors?.['maxlength']"
+                                            class="error-message">
+                                            Số điện thoại phải đúng 10 ký tự
+                                        </div> -->
+                                        <div *ngIf="customerCreateForm.controls['phone']?.errors?.['pattern']" class="error-message">
+                                            Số điện thoại không hợp lệ
                                         </div>
                                     </div>
                                 </div>
+                               
                                 <div class="mb-3">
                                     <label for="description" class="form-label">Mô tả</label>
-                                    <textarea class="form-control" style="height: 100px" id="description" name="description"
+                                    <textarea class="form-control" style="height: 125px" id="description" name="description"
                                         [(ngModel)]="supplier.description"></textarea>
                                     <!-- <div *ngIf="showNameErrorLength" class="error-message">
                                         Mô tả không được nhập quá 500 ký tự.
