--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -27,10 +27,10 @@
                             class="mb-3"
                         />
                         <div class="text-900 text-3xl font-medium mb-3">
-                            Welcome, Isabel!
+                            Xin chào, Tiến Linh!
                         </div>
                         <span class="text-600 font-medium"
-                            >Sign in to continue</span
+                            >Tiếp tục đăng nhập</span
                         >
                     </div>
 
@@ -126,7 +126,7 @@
                         <button
                             pButton
                             pRipple
-                            label="Sign In"
+                            label="Đăng nhập"
                             class="w-full p-3 text-xl"
                             type="submit"
                         ></button>
