--- a/src/app/components/pages/warehouse/stock-in/create/create.component.html
+++ b/src/app/components/pages/warehouse/stock-in/create/create.component.html
@@ -436,6 +436,7 @@
                                         [(ngModel)]="supplierSelected"
                                         [suggestions]="suppliers"
                                         field="name"
+                                        spellcheck="false"
                                         placeholder="Nhập nhà cung cấp"
                                         (completeMethod)="
                                             searchSupplier($event)
