--- a/src/app/components/pages/group-list/group-rights/group-rights.component.html
+++ b/src/app/components/pages/group-list/group-rights/group-rights.component.html
@@ -1,17 +1,11 @@
 <main id="main" class="main">
     <div class="pagetitle">
-        <div>
-            <h3>Quản lý nhóm quyền</h3>
-            <nav>
-                <ol class="breadcrumb">
-                    <li class="breadcrumb-item">
-                        <a href="index.html">Admin</a>
-                    </li>
-                    <li class="breadcrumb-item">Quản lý</li>
-                    <li class="breadcrumb-item active">Quản lý nhóm quyền</li>
-                </ol>
-            </nav>
-        </div>
+        <div class="">
+            <h3>Danh sách nhóm quyền</h3>
+            <p-breadcrumb
+                [model]="items"
+            ></p-breadcrumb>
+          </div>
 
         <div class="btn-add-wrapper">
             <button
