--- a/src/app/components/pages/list-customer/customer/customer.component.html
+++ b/src/app/components/pages/list-customer/customer/customer.component.html
@@ -1,15 +1,11 @@
 <main id="main" class="main">
     <div class="pagetitle">
-        <div>
-          <h3>Quản lý khách hàng</h3>
-          <nav>
-            <ol class="breadcrumb">
-              <li class="breadcrumb-item"><a href="index.html">Admin</a></li>
-              <li class="breadcrumb-item">Khách hàng</li>
-              <li class="breadcrumb-item active">Danh sách khách hàng</li>
-            </ol>
-          </nav>
-        </div>
+      <div>
+        <h3>Quản lý khách hàng</h3>
+        <p-breadcrumb
+        [model]="items">
+        </p-breadcrumb>
+      </div>
     
         <div class="btn-add-wrapper">
           <button
