--- a/src/app/components/pages/products/show-product/show-product.component.html
+++ b/src/app/components/pages/products/show-product/show-product.component.html
@@ -5,19 +5,13 @@
         [closable]="false"
     ></p-messages>
 </div>
-<main id="main" class="main show-product-component">
+<main id="main">
     <div class="pagetitle">
         <div>
             <h3>Quản lý sản phẩm</h3>
-            <nav>
-                <ol class="breadcrumb">
-                    <li class="breadcrumb-item">
-                        <a href="index.html">Admin</a>
-                    </li>
-                    <li class="breadcrumb-item">Sản phẩm</li>
-                    <li class="breadcrumb-item active">Danh sách sản phẩm</li>
-                </ol>
-            </nav>
+            <p-breadcrumb
+            [model]="items">
+            </p-breadcrumb>
         </div>
 
         <div>
@@ -121,13 +115,7 @@
                 >
                     <ng-template pTemplate="header">
                         <tr style="height: 60px" class="n-title-head">
-                            <!-- <th style="width: 5%; padding-left: 20px">
-                  <p-checkbox
-                    [(ngModel)]="checked"
-                    [binary]="true"
-                    inputId="binary"
-                  ></p-checkbox>
-                </th> -->
+
                             <th style="width: 10%">Ảnh</th>
                             <th style="width: 17%">Sản phẩm</th>
                             <th style="width: 15%">Phân loại hàng</th>
@@ -160,9 +148,6 @@
                                 position: relative;
                             "
                         >
-                            <!-- <td style="padding-left: 20px">
-                  <p-checkbox [binary]="true" inputId="binary"></p-checkbox>
-                </td> -->
                             <td class="n-image-product">
                                 <img
                                     [src]="
@@ -180,38 +165,14 @@
                                     {{ product.sku }}
                                 </p>
                             </td>
-                            <!-- <td>
-                  <p
-                    style="margin: 15px 0; height: 23px"
-                    *ngFor="
-                      let variant of this.showAllVariants.get(product.id) === 0 ||
-                      this.showAllVariants.get(product.id) === 2
-                        ? product.productVariants
-                        : product.productVariants.slice(0, 3)
-                    "
-                  >
-                    {{ variant.sku }}
-                  </p>
-                  <p *ngIf="product.productVariants.length === 0">
-                    {{ product.sku }}
-                  </p>
-                </td> -->
+
                             <td>
                                 <div
                                     style="margin: 16px 0; height: 23px"
-                                    *ngFor="
-                                        let variant of this.showAllVariants.get(
-                                            product.id
-                                        ) === 0 ||
-                                        this.showAllVariants.get(product.id) ===
-                                            2
+                                    *ngFor="let variant of this.showAllVariants.get(product.id) === 0 ||
+                                        this.showAllVariants.get(product.id) === 2
                                             ? product.productVariants
-                                            : product.productVariants.slice(
-                                                  0,
-                                                  3
-                                              )
-                                    "
-                                >
+                                            : product.productVariants.slice(0, 3)">
                                     <span
                                         >{{ variant.valuePropeties1 }} ,
                                         {{ variant.valuePropeties2 }}</span
@@ -295,15 +256,6 @@
                                     }}
                                 </p>
                             </td>
-                            <!-- <td class="sellcounts-product">
-                  <p>
-                    {{
-                      product.productVariants.length === 0
-                        ? product.sellCounts
-                        : totalSellCount(product.productVariants)
-                    }}
-                  </p>
-                </td> -->
                             <td
                                 class="n-product-status"
                                 style="
