--- a/src/app/components/pages/merchandise/branch-transfer/branch-transfer.component.html
+++ b/src/app/components/pages/merchandise/branch-transfer/branch-transfer.component.html
@@ -249,11 +249,9 @@
                                         inputId="integeronly"
                                         [(ngModel)]="data.price"
                                         (ngModelChange)="updateTotal(data)"
-                                        (onFocus)="
-                                            functionService.handleFocusPrice(
-                                                $event
-                                            )
-                                        "
+                                        (onFocus)="functionService.handleFocusPrice($event)"
+                                        [readonly]="true"
+                                        (keydown)="preventInput($event)"
                                     />
                                 </td>
                                 <td style="width: 9%; text-align: center">
@@ -265,60 +263,65 @@
                                         style="position: relative"
                                     >
 
-                                    <p-inputNumber
-                                    *ngIf="data.productType === 0"
-                                    [(ngModel)]="data.quantity"
-                                    (onFocus)="
-                                        functionService.handleFocusPrice(
-                                            $event
-                                        )
-                                    "
-                                    (ngModelChange)="updateTotal(data)"
-                                    buttonLayout="horizontal"
-                                    (onFocus)="
-                                        functionService.handleFocusPrice(
-                                            $event
-                                        )
-                                    "
-                                    inputId="horizontal"
-                                    spinnerMode="horizontal"
-                                    [min]="1"
-                                    [step]="1"
-                                />
-                                        <span
-                                            *ngIf="data.productType === 1"
-                                            style="
-                                                text-align: right;
-                                                padding-right: 10px;
-                                                width: 100%;
-                                            "
-                                            >{{ data.quantity }}</span
-                                        >
-                                        <span
-                                            style="
-                                                position: absolute;
-                                                top: 35px;
-                                            "
-                                            *ngIf="
-                                                data.isValid &&
-                                                data.productType === 1
-                                            "
-                                            class="error-message"
-                                            >{{ data.isValidMessage2 }}</span
-                                        >
+                                    <span *ngIf="!data.isEditing && data.productType === 0" 
+                                        style="cursor: pointer;" 
+                                        (click)="toggleEdit(data)">
+                                        {{ data.quantity }} / {{ data.availableQuantity }}
+                                    </span>
 
-                                        <span
-                                            style="
-                                                position: absolute;
-                                                top: 44px;
-                                            "
-                                            *ngIf="
-                                                data.isValid &&
-                                                data.productType != 1
-                                            "
-                                            class="error-message"
-                                            >{{ data.isValidMessage2 }}</span
-                                        >
+                                    <p-inputNumber
+                                        *ngIf="data.isEditing && data.productType === 0"
+                                        [(ngModel)]="data.quantity"
+                                        (onFocus)="functionService.handleFocusPrice($event)"
+                                        (ngModelChange)="updateTotal(data); validateQuantity(data)"
+                                        (onFocus)="functionService.handleFocusPrice($event)"
+                                        (onBlur)="toggleEdit(data, true)"
+                                        (onKeydown.enter)="toggleEdit(data, true)"
+                                        buttonLayout="horizontal"
+                                        inputId="horizontal"
+                                        spinnerMode="horizontal"
+                                        [min]="0"
+                                        [step]="0"
+                                        [max]="data.availableQuantity"
+                                    />
+
+                                    <span *ngIf="data.isValid" class="error-message" style="color: red; font-size: 12px;">
+                                        {{ data.isValidMessageQuantity }} <!-- Error message when invalid quantity -->
+                                    </span>
+
+                                    <span
+                                        *ngIf="data.productType === 1"
+                                        style="
+                                           
+                                            width: 100%;
+                                        "
+                                        >{{ data.quantity }}</span
+                                    >
+                                    <span
+                                        style="
+                                            position: absolute;
+                                            top: 35px;
+                                        "
+                                        *ngIf="
+                                            data.isValid &&
+                                            data.productType === 1
+                                        "
+                                        class="error-message"
+                                        >{{ data.isValidMessage2 }}</span
+                                    >
+
+                                    <span
+                                        style="
+                                            position: absolute;
+                                            top: 44px;
+                                        "
+                                        *ngIf="
+                                            data.isValid &&
+                                            data.productType != 1
+                                        "
+                                        class="error-message"
+                                        >{{ data.isValidMessage2 }}</span
+                                    >
                                     </div>
                                 </td>
                                 <td style="width: 12.5%; text-align: center">
@@ -331,7 +334,7 @@
                                     ></i>
                                 </td>
                             </tr>
-                            <tr *ngIf="data.productType == 1 || this.items.length > 0">
+                            <tr *ngIf="data.productType == 1 || this.items?.length > 0">
                                 <td colspan="8" class="p-3 border-none">
                                     <div class="flex flex-column">
                                         <div style="display: flex; flex-wrap: wrap;">
